# kap

./: .gitignore  .mise.toml  00_fremgangsmåte.md  01_scoring.md  02_datamodell.md  03_data_pipeline.md  04_curator.md  05_api.md  06_frontend.md  07_kartoteket.md  08_realtime.md  Instructions.md  TODO_pipeline.md  TODO_ui.md  beskrivelse.md  fmp_questions.md  fpm_probe.py  pyproject.toml  skills-lock.json
app/: README.md  build.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: config.dart  main.dart
app/lib/models/: choice.dart  daily_batch.dart  daily_batch.freezed.dart  daily_batch.g.dart  decision.dart  decision.freezed.dart  decision.g.dart  game_card.dart  game_card.freezed.dart  game_card.g.dart  me_stats.dart  me_stats.freezed.dart  (+4 more)
app/test/: widget_test.dart
app/web/: index.html
backend/: __init__.py  auth.py  db.py  fake_data.py  fmp.py  main.py  repo.py  schemas.py  scoring.py  seed.py  stats.py
backend/pipeline/: build_universe.py  financials.py  ingest_universe.py  persist_universe.py  prices.py  sp500.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_cp33_checkpoint.py  test_db_integration.py  test_financials.py  test_financials_db.py  test_fmp.py  test_fmp_integration.py  test_prices.py  test_scoring.py  test_sp500.py  test_stats.py  test_universe_db.py
scripts/: validate_migrations.mjs
supabase/: config.toml
supabase/migrations/: 20260706120000_core_schema.sql  20260706120100_supabase_auth_rls.sql  20260706150000_batch_intro.sql
(+21 files in other folders)
