[project]
name = "kap"
version = "0.0.0"
description = "KAP"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.137.2",
    "requests>=2.34",
]

# Workflow:
#   uv sync     -> creates .venv and installs exactly these deps
#   uv add X    -> add a new dependency (updates this file + uv.lock)
#   uv run X.py -> run inside the project env without activating anything
[tool.uv]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
